--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </ul>
       </nav>
     </header>
-     <section class="hero-section">
+    <section class="hero-section">
       <picture>
         <source
           srcset="https://tapsi.ir/images/home/banner.webp"
@@ -450,74 +450,76 @@
         </div>
       </div>
     </section>
-    <div class="contact-us container block">
-      <div class="contact-us__social">
-        <span class="icon-container">
-          <svg class="icon icon--small">
-            <use xlink:href="/asset/image/svg-sprite.svg#linkedin"></use>
-          </svg>
-        </span>
-        <span class="icon-container">
-          <svg class="icon icon--small">
-            <use xlink:href="/asset/image/svg-sprite.svg#telegram"></use>
-          </svg>
-        </span>
-        <span class="icon-container">
-          <svg class="icon icon--small">
-            <use xlink:href="/asset/image/svg-sprite.svg#twitter"></use>
-          </svg>
-        </span>
-      </div>
-      <div class="contact-us__icons">
-        <div class="icon-holder">
-          <span class="icon-holder__label" dir="ltr">
-            Lorem ipsum dolor sit amet.
+    <!-- <section class="container block">
+      <div class="contact-us">
+        <div class="contact-us__social">
+          <span class="icon-container">
+            <svg class="icon icon--small">
+              <use xlink:href="/asset/image/svg-sprite.svg#linkedin"></use>
+            </svg>
           </span>
           <span class="icon-container">
             <svg class="icon icon--small">
-              <use xlink:href="/asset/image/svg-sprite.svg#Calling"></use>
+              <use xlink:href="/asset/image/svg-sprite.svg#telegram"></use>
             </svg>
-          </span>
-        </div>
-        <div class="icon-holder">
-          <span class="icon-holder__label" dir="ltr">
-            Lorem ipsum dolor sit amet consectetur adipisicing.
           </span>
           <span class="icon-container">
             <svg class="icon icon--small">
-              <use xlink:href="/asset/image/svg-sprite.svg#Message"></use>
+              <use xlink:href="/asset/image/svg-sprite.svg#twitter"></use>
             </svg>
           </span>
         </div>
-        <div class="icon-holder">
-          <span class="icon-holder__label" dir="ltr">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Voluptatum.
-          </span>
-          <span class="icon-container">
-            <svg class="icon icon--small">
-              <use xlink:href="/asset/image/svg-sprite.svg#Location"></use>
-            </svg>
-          </span>
+        <div class="contact-us__icons">
+          <div class="icon-holder">
+            <span class="icon-holder__label" dir="ltr">
+              Lorem ipsum dolor sit amet.
+            </span>
+            <span class="icon-container">
+              <svg class="icon icon--small">
+                <use xlink:href="/asset/image/svg-sprite.svg#Calling"></use>
+              </svg>
+            </span>
+          </div>
+          <div class="icon-holder">
+            <span class="icon-holder__label" dir="ltr">
+              Lorem ipsum dolor sit amet consectetur adipisicing.
+            </span>
+            <span class="icon-container">
+              <svg class="icon icon--small">
+                <use xlink:href="/asset/image/svg-sprite.svg#Message"></use>
+              </svg>
+            </span>
+          </div>
+          <div class="icon-holder">
+            <span class="icon-holder__label" dir="ltr">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Voluptatum.
+            </span>
+            <span class="icon-container">
+              <svg class="icon icon--small">
+                <use xlink:href="/asset/image/svg-sprite.svg#Location"></use>
+              </svg>
+            </span>
+          </div>
+        </div>
+        <div class="contact-us__map">
+          <div class="map__container">
+            <img src="/asset/image/map.png" alt="map" />
+          </div>
+        </div>
+        <div class="contact-us__form">
+          <div class="form-wrapper">
+            <h3 class="form-title">نظرات شما</h3>
+            <form class="form-inputs">
+              <input type="text" placeholder="نام و نام خانوادگی" />
+              <input type="email" placeholder="ایمیل خود را وارد کنید" />
+              <textarea name="comment" id="" cols="30" rows="10"></textarea>
+              <button type="submit" class="btn btn--primary">Send</button>
+            </form>
+          </div>
         </div>
       </div>
-      <div class="contact-us__map">
-        <div class="map__container">
-          <img src="/asset/image/map.png" alt="map" />
-        </div>
-      </div>
-      <div class="contact-us__form">
-        <div class="form-wrapper">
-          <h3 class="form-title">نظرات شما</h3>
-          <form class="form-inputs">
-            <input type="text" placeholder="نام و نام خانوادگی" />
-            <input type="email" placeholder="ایمیل خود را وارد کنید" />
-            <textarea name="comment" id="" cols="30" rows="10"></textarea>
-            <button type="submit" class="btn btn--primary">Send</button>
-          </form>
-        </div>
-      </div>
-    </div>
+    </section> -->
     <footer class="main-footer">
       <div class="footer">
         <div class="footer__item logo">
