html css edited

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
         </div>
       </div>
     </section>
-    <!-- <section class="container block">
+    <section class="container block">
       <div class="contact-us">
         <div class="contact-us__social">
           <span class="icon-container">
@@ -519,7 +519,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <footer class="main-footer">
       <div class="footer">
         <div class="footer__item logo">
