--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="theme-color" content="#319197"> -->
     <link rel="stylesheet" href="./css/font.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -110,7 +111,11 @@
         </div>
       </div>
     </section>
-    <section class="services container block block-heading" data-aos="fade-up" data-aos-duration="1500">
+    <section
+      class="services container block block-heading"
+      data-aos="fade-up"
+      data-aos-duration="1500"
+    >
       <h2 class="services__title">سرویس های تپسی</h2>
       <nav class="services__tabs">
         <a class="tab active" data-tab-target="nav-classic-tab">
@@ -341,7 +346,11 @@
         </div>
       </section>
     </section>
-    <section class="container block" data-aos="fade-up" data-aos-duration="1500">
+    <section
+      class="container block"
+      data-aos="fade-up"
+      data-aos-duration="1500"
+    >
       <section class="feature">
         <div class="feature__image">
           <img src="/asset/image/i-mac-1.png" alt="feature-image" />
@@ -374,7 +383,11 @@
         </div>
       </section>
     </section>
-    <section class="block-plan container" data-aos="fade-up" data-aos-duration="1500">
+    <section
+      class="block-plan container"
+      data-aos="fade-up"
+      data-aos-duration="1500"
+    >
       <div class="plan">
         <div class="card card__secondary">
           <header class="card__header">
@@ -450,7 +463,11 @@
         </div>
       </div>
     </section>
-    <section class="main-contact-us container block" data-aos="fade-up" data-aos-duration="1500">
+    <section
+      class="main-contact-us container block"
+      data-aos="fade-up"
+      data-aos-duration="1500"
+    >
       <h2>نظرات شما</h2>
       <div class="contact-us">
         <div class="contact-us__social">
@@ -517,6 +534,138 @@
               <textarea name="comment" id="" cols="30" rows="10"></textarea>
               <button type="submit" class="btn btn--primary">Send</button>
             </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container travell block">
+      <div class="travell__slides">
+        <div class="travell__slide">
+          <div class="slide__img">
+            <img src="../asset/image/travell.png" alt="travell" />
+          </div>
+          <div class="slide__detail">
+            <div class="slide__header">
+              <span class="badge badge--primary">ویژه</span>
+              <p>اقامت رایگان &bull; سفر سه روزه</p>
+            </div>
+            <p class="slide__title">سفر به قلب کویر لوت</p>
+            <div class="slide__icons">
+              <div>
+                <i class="fa-regular fa-heart"></i>
+                <span>12</span>
+                <!-- <i class="fa-solid fa-heart"></i> -->
+                <i class="fa-regular fa-eye"></i>
+                <span>99</span>
+              </div>
+              <div>
+                <i class="far fa-edit"></i>
+                <i class="far fa-trash-alt"></i>
+              </div>
+            </div>
+            <div class="avatar-group">
+              <div class="avatar"><img src="../asset/image/avatar-1.jpg" alt=""></div>
+              <div class="avatar"><img src="../asset/image/avatar-2.jpeg" alt=""></div>
+              <div class="avatar"><img src="../asset/image/avatar-3.jpg" alt=""></div>
+              <div class="hidden-avatars">+10</div>
+              <span class="slide__suggest">پیشنهاد</span>
+            </div>
+          </div>
+        </div>
+        <div class="travell__slide">
+          <div class="slide__img">
+            <img src="../asset/image/travell-2.jpg" alt="travell" />
+          </div>
+          <div class="slide__detail">
+            <div class="slide__header">
+              <span class="badge badge--primary">ویژه</span>
+              <p>اقامت رایگان &bull; سفر سه روزه</p>
+            </div>
+            <p class="slide__title">سفر به قلب کویر لوت</p>
+            <div class="slide__icons">
+              <div>
+                <i class="fa-regular fa-heart"></i>
+                <span>12</span>
+                <!-- <i class="fa-solid fa-heart"></i> -->
+                <i class="fa-regular fa-eye"></i>
+                <span>99</span>
+              </div>
+              <div>
+                <i class="far fa-edit"></i>
+                <i class="far fa-trash-alt"></i>
+              </div>
+            </div>
+            <div class="avatar-group">
+              <div class="avatar"><img src="../asset/image/avatar-1.jpg" alt=""></div>
+              <div class="avatar"><img src="../asset/image/avatar-2.jpeg" alt=""></div>
+              <div class="avatar"><img src="../asset/image/avatar-3.jpg" alt=""></div>
+              <div class="hidden-avatars">+10</div>
+              <span class="slide__suggest">پیشنهاد</span>
+            </div>
+          </div>
+        </div>
+        <div class="travell__slide">
+          <div class="slide__img">
+            <img src="../asset/image/travell-3.jpg" alt="travell" />
+          </div>
+          <div class="slide__detail">
+            <div class="slide__header">
+              <span class="badge badge--primary">ویژه</span>
+              <p>اقامت رایگان &bull; سفر سه روزه</p>
+            </div>
+            <p class="slide__title">سفر به قلب کویر لوت</p>
+            <div class="slide__icons">
+              <div>
+                <i class="fa-regular fa-heart"></i>
+                <span>12</span>
+                <!-- <i class="fa-solid fa-heart"></i> -->
+                <i class="fa-regular fa-eye"></i>
+                <span>99</span>
+              </div>
+              <div>
+                <i class="far fa-edit"></i>
+                <i class="far fa-trash-alt"></i>
+              </div>
+            </div>
+            <div class="avatar-group">
+              <div class="avatar"><img src="../asset/image/avatar-1.jpg" alt=""></div>
+              <div class="avatar"><img src="../asset/image/avatar-2.jpeg" alt=""></div>
+              <div class="avatar"><img src="../asset/image/avatar-3.jpg" alt=""></div>
+              <div class="hidden-avatars">+10</div>
+              <span class="slide__suggest">پیشنهاد</span>
+            </div>
+          </div>
+        </div>
+        <div class="travell__slide">
+          <div class="slide__img">
+            <img src="../asset/image/travell-4.jpg" alt="travell" />
+          </div>
+          <div class="slide__detail">
+            <div class="slide__header">
+              <span class="badge badge--primary">ویژه</span>
+              <p>اقامت رایگان &bull; سفر سه روزه</p>
+            </div>
+            <p class="slide__title">سفر به قلب کویر لوت</p>
+            <div class="slide__icons">
+              <div>
+                <i class="fa-regular fa-heart"></i>
+                <span>12</span>
+                <!-- <i class="fa-solid fa-heart"></i> -->
+                <i class="fa-regular fa-eye"></i>
+                <span>99</span>
+              </div>
+              <div>
+                <i class="far fa-edit"></i>
+                <i class="far fa-trash-alt"></i>
+              </div>
+            </div>
+            <div class="avatar-group">
+              <div class="avatar"><img src="../asset/image/avatar-1.jpg" alt=""></div>
+              <div class="avatar"><img src="../asset/image/avatar-2.jpeg" alt=""></div>
+              <div class="avatar"><img src="../asset/image/avatar-3.jpg" alt=""></div>
+              <div class="hidden-avatars">+10</div>
+              <span class="slide__suggest">پیشنهاد</span>
+            </div>
           </div>
         </div>
       </div>
