add travell section

--- a/index.html
+++ b/index.html
@@ -538,7 +538,11 @@
         </div>
       </div>
     </section>
-    <section class="container travell block">
+    <section
+      class="container travell block"
+      data-aos="fade-up"
+      data-aos-duration="1500"
+    >
       <div class="travell__slides">
         <div class="travell__slide">
           <div class="slide__img">
@@ -564,9 +568,15 @@
               </div>
             </div>
             <div class="avatar-group">
-              <div class="avatar"><img src="../asset/image/avatar-1.jpg" alt=""></div>
-              <div class="avatar"><img src="../asset/image/avatar-2.jpeg" alt=""></div>
-              <div class="avatar"><img src="../asset/image/avatar-3.jpg" alt=""></div>
+              <div class="avatar">
+                <img src="../asset/image/avatar-1.jpg" alt="" />
+              </div>
+              <div class="avatar">
+                <img src="../asset/image/avatar-2.jpeg" alt="" />
+              </div>
+              <div class="avatar">
+                <img src="../asset/image/avatar-3.jpg" alt="" />
+              </div>
               <div class="hidden-avatars">+10</div>
               <span class="slide__suggest">پیشنهاد</span>
             </div>
@@ -596,9 +606,15 @@
               </div>
             </div>
             <div class="avatar-group">
-              <div class="avatar"><img src="../asset/image/avatar-1.jpg" alt=""></div>
-              <div class="avatar"><img src="../asset/image/avatar-2.jpeg" alt=""></div>
-              <div class="avatar"><img src="../asset/image/avatar-3.jpg" alt=""></div>
+              <div class="avatar">
+                <img src="../asset/image/avatar-1.jpg" alt="" />
+              </div>
+              <div class="avatar">
+                <img src="../asset/image/avatar-2.jpeg" alt="" />
+              </div>
+              <div class="avatar">
+                <img src="../asset/image/avatar-3.jpg" alt="" />
+              </div>
               <div class="hidden-avatars">+10</div>
               <span class="slide__suggest">پیشنهاد</span>
             </div>
@@ -628,9 +644,15 @@
               </div>
             </div>
             <div class="avatar-group">
-              <div class="avatar"><img src="../asset/image/avatar-1.jpg" alt=""></div>
-              <div class="avatar"><img src="../asset/image/avatar-2.jpeg" alt=""></div>
-              <div class="avatar"><img src="../asset/image/avatar-3.jpg" alt=""></div>
+              <div class="avatar">
+                <img src="../asset/image/avatar-1.jpg" alt="" />
+              </div>
+              <div class="avatar">
+                <img src="../asset/image/avatar-2.jpeg" alt="" />
+              </div>
+              <div class="avatar">
+                <img src="../asset/image/avatar-3.jpg" alt="" />
+              </div>
               <div class="hidden-avatars">+10</div>
               <span class="slide__suggest">پیشنهاد</span>
             </div>
@@ -660,9 +682,15 @@
               </div>
             </div>
             <div class="avatar-group">
-              <div class="avatar"><img src="../asset/image/avatar-1.jpg" alt=""></div>
-              <div class="avatar"><img src="../asset/image/avatar-2.jpeg" alt=""></div>
-              <div class="avatar"><img src="../asset/image/avatar-3.jpg" alt=""></div>
+              <div class="avatar">
+                <img src="../asset/image/avatar-1.jpg" alt="" />
+              </div>
+              <div class="avatar">
+                <img src="../asset/image/avatar-2.jpeg" alt="" />
+              </div>
+              <div class="avatar">
+                <img src="../asset/image/avatar-3.jpg" alt="" />
+              </div>
               <div class="hidden-avatars">+10</div>
               <span class="slide__suggest">پیشنهاد</span>
             </div>
